# senior_project

./: _quarto.yml  index.qmd  new_post.sh  pyproject.toml
_site/: about.html  index.html  index.xml  search.json  sitemap.xml
code/: 01_extract.ipynb  02_analysis.ipynb
docs/: about.html  index.html  index.xml  listings.json  robots.txt  search.json  sitemap.xml
docs/posts/Building-the-model/: index.html
docs/posts/Introduction/: index.html
docs/posts/results/: index.html
posts/Building-the-model/: index.qmd
posts/Introduction/: index.qmd
posts/results/: index.qmd
posts/test/: index.qmd
src/leoalvarino/: __init__.py
